--- a/app/views/filter_sets/show.html.haml
+++ b/app/views/filter_sets/show.html.haml
@@ -1,3 +1,3 @@
 .ui-container.mam.pam
   %pre.ui-container.bright.phm.title-m
-    = JSON.pretty_generate @filter_set.as_json(root: true)
+    = JSON.pretty_generate @get.as_json(root: true)
