--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -1,4 +1,2 @@
 .ui-container.mam.pam
-  %pre.ui-container.bright.phm.title-m
-    -# = JSON.pretty_generate @collections.map &:attributes
-    = JSON.pretty_generate @collections.as_json(root: true)
+  = react('Deco.MediaResourcesBox', get: @get, interactive: true)
