--- a/app/views/my/dashboard.haml
+++ b/app/views/my/dashboard.haml
@@ -20,7 +20,7 @@
       -# empty section *are* skipped on the dashboard index
       - next if section[:is_empty?]
       = combo('resources-header', title: section[:title],
-                link: { text: t(:dashboard_show_all),
+                link: { text: t(:resources_header_show_all),
                         href: my_dashboard_section_path(section[:id])})
       = render partial: "my/section_#{section[:partial]}",
                locals: { get: @get, section: section, show_pagination_nav: false }
