layout: remove devtools, class fix
(too slow)

--- a/app/views/layouts/app_with_sidebar.html.haml
+++ b/app/views/layouts/app_with_sidebar.html.haml
@@ -13,7 +13,7 @@
       .ui-container.rounded-bottom-left.phm.pvl
         = content_for(:page_sidebar)
 
-    .ui-container.app-body-content.table-cell.table-substance.context-fix
+    .ui-container.app-body-content.table-cell.table-substance
       = content_for(:page_content)
 
 = render template: 'layouts/application'
