video/audio upload with zencoder encoding
Squashed commit of the following:

fix feature spec
move zencoder initializer to datalayer subproject
authorize media file with access hash
skip ZencoderJobsController authorization
controller: module: FileStorage: adjust file permissions, so zencoder can download it
set width for video outputs
handle uploaded audio files with zencoder
admin: preview: display player for audio/video files
fix: use media file's content_type to recognize audio/video files
set Zencoder configuration from settings file

--- a/app/views/admin/media_files/_zencoder_jobs.html.haml
+++ b/app/views/admin/media_files/_zencoder_jobs.html.haml
@@ -7,7 +7,6 @@
       .panel-body
         .btn-group
           = link_to 'Reencode', '#', class: 'btn btn-info disabled',
-            data: { confirm: 'Let previes reencode by zencoder.com? |
-            This action is liable to pay costs.' }                  |
+            data: { confirm: 'Let previes reencode by zencoder.com? This action is liable to pay costs.' }
 
     = render 'admin/zencoder_jobs/zencoder_jobs_table'
