ui: polybox: create FilterSet from current config (opt-in)
simple version, can only work on the "plain" view, where no "base filter" is applied in presenter (as in PersonShow)

--- a/app/views/media_entries/index.html.haml
+++ b/app/views/media_entries/index.html.haml
@@ -1,2 +1,2 @@
 .ui-container.mam.pam
-  = react('Deco.MediaResourcesBox', get: @get, interactive: true)
+  = react('Deco.MediaResourcesBox', get: @get, interactive: true, saveable: true)
