--- a/app/views/my/_section_keywords.html.haml
+++ b/app/views/my/_section_keywords.html.haml
@@ -1,6 +1,6 @@
 :ruby
   keywords = get.used_keywords.map do |keyword|
-    { text: keyword.term, link: keyword.url }
+    { text: keyword.label, link: keyword.url }
   end
 
 .ui-container.pbl
