--- a/app/ui_elements/decorators/vocabulary_meta_data_list.haml
+++ b/app/ui_elements/decorators/vocabulary_meta_data_list.haml
@@ -30,9 +30,10 @@
         - is_editable = meta_datum.policy(current_user).edit?
 
         -# TMP for edit POC. text only!
-        - is_editable = false unless (key.type == 'MetaDatum::Text')
+        - type = key.value_type
+        - is_editable = false unless (type == 'MetaDatum::Text')
         - react_editor = is_editable && { react_class: 'MetaDatumEdit',
-                                          meta_datum: { url: url, type: key.type } }
+                                          meta_datum: { url: url, type: type } }
         %dl.media-data.mbs{data: react_editor}
 
           %dt.media-data-title<>
@@ -42,5 +43,5 @@
 
           %dd.media-data-content
             -# decorate value by type (ex.: /decorators/meta_datum_values/text.haml)
-            - decorator = key.type.demodulize.underscore
+            - decorator = key.value_type.demodulize.underscore
             = deco("meta_datum_values/#{decorator}", values: meta_datum.values)
