--- a/app/views/filter_sets/index.html.haml
+++ b/app/views/filter_sets/index.html.haml
@@ -1,2 +1,5 @@
-.ui-container.mam.pam
-  = react('Deco.MediaResourcesBox', get: @get, interactive: true)
+= component('page-header',
+    icon: component('icon.media-entry'),
+    text: 'Sets')
+
+= react('Deco.MediaResourcesBox', get: @get, interactive: true)
