--- a/app/ui_elements/decorators/meta_data_list.haml
+++ b/app/ui_elements/decorators/meta_data_list.haml
@@ -1,10 +1,9 @@
 :ruby
-  data ||= {}
   show_title = true unless defined?(show_title) and (show_title == false)
   show_fallback = true unless defined?(show_fallback) and (show_fallback == false)
-  meta_data = data.meta_data
+  meta_data = data && data.meta_data
   # NOTE: takes either context or vocabulary…
-  context = data.context || data.vocabulary
+  context = data && (data.context || data.vocabulary)
 
   fallback_msg = t(:resource_meta_data_fallback)
 
