--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -10,6 +10,23 @@
       data: { confirm: t(:btn_delete_confirm_msq) })
   ]
 
+  favor_button = (@get.policy(current_user).disfavor? and @get.favored) ?
+    component('button',
+      link: disfavor_media_entry_path,
+      method: :patch,
+      icon: :favorite)
+    : nil
+
+  disfavor_button = (@get.policy(current_user).favor? and !@get.favored) ?
+    component('button',
+      link: favor_media_entry_path,
+      method: :patch,
+      icon: :nofavorite)
+    : nil
+
+  favor_button ? action_buttons << favor_button : nil
+  disfavor_button ? action_buttons << disfavor_button : nil
+
 = component('page-header',
     icon: component('icon.media-entry'),
     text: @get.title,
