presenters/ui: MediaResourceList: optimize queries
- only load DynamicFilters if really needed
- disable filtering where not implemented
- cleanup

--- a/app/ui_elements/combos/tabbed-sections.haml
+++ b/app/ui_elements/combos/tabbed-sections.haml
@@ -1,6 +1,7 @@
 :ruby
   return unless list
   component_id = defined?(id) ? id : local_assigns.to_h.hash.to_s.underscore
+  interactive = local_assigns.try(:[], :interactive).presence || false
 
   tabs_bar_list = []
   content_panes_list = []
