--- a/app/views/explore/index.html.haml
+++ b/app/views/explore/index.html.haml
@@ -13,10 +13,10 @@
               href: collections_path})
   = react('Deco.MediaResourcesBox', get: @get.collections, interactive: false)
 
-  %hr.separator.mini.mbl
-
-  = combo('resources-header',
-      title: t(:sitemap_filter_sets),
-      link: { text: t(:resources_header_show_all),
-              href: filter_sets_path})
-  = react('Deco.MediaResourcesBox', get: @get.filter_sets, interactive: false)
+  -# %hr.separator.mini.mbl
+  -#
+  -# = combo('resources-header',
+  -#     title: t(:sitemap_filter_sets),
+  -#     link: { text: t(:resources_header_show_all),
+  -#             href: filter_sets_path})
+  -# = react('Deco.MediaResourcesBox', get: @get.filter_sets, interactive: false)
