--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -2,13 +2,6 @@
   tag_mods = ['small','ellipsed']
   collection_show = {}
 
-  permission_button =
-    component('button.primary',
-              link: permissions_collection_path(@get.uuid),
-              text: t(:collection_permissions_btn))
-
-  action_buttons =[permission_button]
-
   favor_button = (@get.policy(current_user).disfavor? and @get.favored) ?
     component('button',
       link: disfavor_collection_path,
@@ -23,8 +16,7 @@
       icon: :nofavorite)
     : nil
 
-  favor_button ? action_buttons << favor_button : nil
-  disfavor_button ? action_buttons << disfavor_button : nil
+  action_buttons =[favor_button, disfavor_button].compact
 
   collection_show[:header] = \
     component('page-header',
