--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,11 +12,16 @@
   }
 
 - content_for(:body) do
+
+  - if content_for?(:modal)
+    = content_for(:modal)
+
   #app.app{data: { view: request[:controller], action: request[:action] }}
 
     = render('application/app_header')
 
-    = render('application/app_alerts')
+    - if not content_for?(:modal)
+      = render('application/app_alerts')
 
     .app-body
       - if content_for?(:app_body)
