view: fix resources/index alignment, titles

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -1,2 +1,5 @@
-.ui-container.mam.pam
-  = react('Deco.MediaResourcesBox', get: @get, interactive: true)
+= component('page-header',
+    icon: component('icon.media-entry'),
+    text: t(:sitemap_collections))
+
+= react('Deco.MediaResourcesBox', get: @get, interactive: true, saveable: true)
