--- a/app/views/media_entries/index.html.haml
+++ b/app/views/media_entries/index.html.haml
@@ -1,5 +1,5 @@
 = component('page-header',
     icon: component('icon.media-entry'),
-    text: 'Einträge')
+    text: t(:sitemap_entries))
 
 = react('Deco.MediaResourcesBox', get: @get, interactive: true, saveable: true)
