presenters: rewrite preview helper
- it tries harder to find something useful
- use correct size for indexes (medium!)
- works for videos
- port 30% video frame rule
- Collection: handle hidden Entry as cover
- routes: rename /previews -> /media (name is resource is impl. detail)
- lots of cleanup

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -31,7 +31,7 @@
       preview: \
         component('thumbnail', mods: ['media-set'],
           title: @get.title,
-          picture: @get.preview_thumb_url),
+          picture: @get.image_url),
       content: \
         combo('metadata-box',
           mods: 'ui-summary-table.ui-set-summary.compact',
