features: "create set", "edit set cover", "select set for media entry"

--- a/app/ui_elements/decorators/thumbnails/media_entry_index.haml
+++ b/app/ui_elements/decorators/thumbnails/media_entry_index.haml
@@ -10,7 +10,7 @@
     # yes this is *inside* the thumb… workaround hacky CSS :/
     meta: {
       title: get.title,
-      subtitle: get.authors
+      subtitle: 'TODO in media_entry_index.haml'
     },
     badge_top_left: deco('privacy-status-icon', get: get)
   }
